Fix montar year calendar

--- a/src/app/components/year-calendar/month-calendar/month-calendar.component.html
+++ b/src/app/components/year-calendar/month-calendar/month-calendar.component.html
@@ -15,7 +15,7 @@
         <ul class="calendar-dates">
           @for (calendarDay of calendarDays; track calendarDay) {
             <li
-              (click)="handleClick(calendarDay)"
+              (click)="handleCalendarDayClick(calendarDay)"
               [ngClass]="{ inactive: calendarDay.inactive, active: calendarDay.isToday }">
               <span [ngStyle]="{ background: calendarDay.background, color: calendarDay.color }" class="calendar-day">
                 @if (calendarDay.day < 10) {
