--- a/src/app/components/year-calendar/year-calendar.component.html
+++ b/src/app/components/year-calendar/year-calendar.component.html
@@ -1,5 +1,8 @@
 <div class="d-flex flex-wrap justify-content-center">
-  @for (date of monthsInYear; track date) {
-    <aw-month-calendar [date]="date" [calendarDayEvents]="calendarDayEvents" />
+  @for (date of monthDatesInYear; track date) {
+    <aw-month-calendar
+      (calendarDayClick)="handleCalendarDayClick($event)"
+      [date]="date"
+      [calendarDayEvents]="calendarDayEvents" />
   }
 </div>
