--- a/src/app/components/year-calendar/month-calendar/month-calendar.component.scss
+++ b/src/app/components/year-calendar/month-calendar/month-calendar.component.scss
@@ -25,13 +25,19 @@
       margin-top: 17px;
       position: relative;
       z-index: 1;
-      cursor: pointer;
 
       .calendar-day {
-        padding: 8px;
+        border-radius: 15px;
+        padding: 6px;
 
         &:hover {
+          cursor: pointer;
           background-color: cadetblue;
+
+          &.day-event {
+            background-color: transparent;
+            cursor: default;
+          }
         }
       }
     }
