--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -3,4 +3,9 @@
     (calendarDayClick)="handleCalendarDayClick($event)"
     [year]="year"
     [calendarDayEvents]="calendarDayEvents" />
+
+  <ng-template #popTemplate let-message="message"> </ng-template>
+  <button type="button" class="btn btn-primary" [popover]="popTemplate" [popoverContext]="">
+    Open popover with custom context
+  </button>
 </aw-page-base>
