--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -1,11 +1,3 @@
 <aw-page-base>
-  <aw-year-calendar
-    (calendarDayClick)="handleCalendarDayClick($event)"
-    [year]="year"
-    [calendarDayEvents]="calendarDayEvents" />
-
-  <ng-template #popTemplate let-message="message"> </ng-template>
-  <button type="button" class="btn btn-primary" [popover]="popTemplate" [popoverContext]="">
-    Open popover with custom context
-  </button>
+  <h1>Dashboard</h1>
 </aw-page-base>
