Selector de rango de fechas anadido prev y next

--- a/src/app/components/selectors/date-range-selector/date-range-selector.component.html
+++ b/src/app/components/selectors/date-range-selector/date-range-selector.component.html
@@ -1,4 +1,13 @@
-<div class="d-flex">
+<div class="d-flex align-items-center">
+  <!-- previous -->
+  @if (!isDisabled) {
+    <button (click)="handlePreviousRange()" class="btn btn-sm btn-outline-primary">
+      <span class="fa-solid fa-left-long"></span>
+    </button>
+  }
+  <!-- end previous -->
+
+  <!-- input form -->
   <input
     (bsValueChange)="handleChangeValue($event)"
     [(ngModel)]="rangeValue"
@@ -8,12 +17,26 @@
     [disabled]="isDisabled"
     bsDaterangepicker
     class="form-control" />
-  <span
-    [ngClass]="{
-      'text-success': isDisabled && enableClickIcon,
-      'text-danger': !isDisabled && enableClickIcon,
-      'cursor-pointer': enableClickIcon
-    }"
-    (click)="handleClickIcon()"
-    class="fa-regular fa-calendar ms-2"></span>
+  <!-- end input form -->
+
+  <!-- next -->
+  @if (!isDisabled) {
+    <button (click)="handleNextRange()" class="btn btn-sm btn-outline-primary">
+      <span class="fa-solid fa-right-long"></span>
+    </button>
+  }
+  <!-- end next -->
+
+  <!-- state -->
+  <button
+    (click)="handleToggleState()"
+    [ngClass]="{ 'btn-outline-danger': !isDisabled, 'btn-outline-success': isDisabled }"
+    class="btn btn-sm">
+    @if (isDisabled) {
+      <span awTooltip title="Activar filtro" class="fa-regular fa-calendar"></span>
+    } @else {
+      <span awTooltip title="Desactivar filtro" class="fa-regular fa-calendar"></span>
+    }
+  </button>
+  <!-- end state -->
 </div>
