--- a/src/app/pages/time-control-records/time-control-record-list/time-control-record-list.component.html
+++ b/src/app/pages/time-control-records/time-control-record-list/time-control-record-list.component.html
@@ -32,11 +32,13 @@
           <i class="fa-solid fa-triangle-exclamation"></i> Incidencias
         </button>
         <!-- end filter incidences -->
+      </div>
 
+      <div>
         <!-- date range filter -->
         <aw-date-range-selector
           (dateRangeValueChange)="handleDateRangeValueChange($event)"
-          (clickIcon)="handleClickIconDateRange()"
+          (changeState)="handleClickIconDateRange()"
           [isDisabled]="!filterDateRange" />
       </div>
       <!-- date range filter -->
