--- a/src/app/pages/time-control-records/time-control-record-list/time-control-record-list.component.html
+++ b/src/app/pages/time-control-records/time-control-record-list/time-control-record-list.component.html
@@ -38,8 +38,8 @@
         <!-- date range filter -->
         <aw-date-range-selector
           (dateRangeValueChange)="handleDateRangeValueChange($event)"
-          (changeState)="handleClickIconDateRange()"
-          [isDisabled]="!filterDateRange" />
+          (changeState)="handleState()"
+          [isDisabled]="!filterStateDateRange" />
       </div>
       <!-- date range filter -->
 
