Establecido datos from y to en aw-date-range-selector

--- a/src/app/pages/time-control-records/time-control-record-list/time-control-record-list.component.html
+++ b/src/app/pages/time-control-records/time-control-record-list/time-control-record-list.component.html
@@ -39,6 +39,7 @@
         <aw-date-range-selector
           (dateRangeValueChange)="handleDateRangeValueChange($event)"
           (changeState)="handleState()"
+          [rangeValue]="[from, to]"
           [isDisabled]="!filterStateDateRange" />
       </div>
       <!-- date range filter -->
