--- a/src/app/pages/company-settings/company-settings-details/company-settings-details.component.html
+++ b/src/app/pages/company-settings/company-settings-details/company-settings-details.component.html
@@ -31,12 +31,12 @@
           </tr>
           <tr>
             <td>
-              Horas diarias de trabajo
+              Periodo máx de un control de tiempo
               <aw-tooltip-info
-                content="Horas máximas al día continuadas por los empleados"
+                content="Horas máximas de un control de tiempo, si se excede se cierran automáticamente"
                 cssClass="text-info"></aw-tooltip-info>
             </td>
-            <td>{{ companySettings()?.maximumDailyWorkHours }} horas</td>
+            <td>{{ companySettings()?.periodTimeControlMax }} horas</td>
           </tr>
           <tr>
             <td>
