Remplazado icono para anadir tiempo

--- a/src/app/pages/time-control-records/time-control-record-list/time-control-record-list.component.html
+++ b/src/app/pages/time-control-records/time-control-record-list/time-control-record-list.component.html
@@ -7,7 +7,7 @@
       <!-- button add time -->
       <div>
         <a [routerLink]="siteUrls.timeControlRecords.create" class="btn btn-sm btn-outline-success">
-          <span class="fa-regular fa-clock"></span> Añadir tiempo
+          <span class="fa-solid fa-plus"></span> Añadir tiempo
         </a>
       </div>
       <!-- end button add time -->
