Refactor year-calendar de Date a DateTime

--- a/src/app/pages/company-holidays-manage/company-holidays-manage.component.html
+++ b/src/app/pages/company-holidays-manage/company-holidays-manage.component.html
@@ -1,7 +1,7 @@
 <aw-page-base>
   <aw-year-calendar
     (calendarDayClick)="handleCalendarDayClick($event)"
-    [year]="year"
+    [date]="date"
     [calendarDayEvents]="calendarDayEvents" />
 
   <ng-template #popTemplate let-message="message"> </ng-template>
