Add loading statis

--- a/src/app/components/year-calendar/year-calendar.component.html
+++ b/src/app/components/year-calendar/year-calendar.component.html
@@ -3,6 +3,7 @@
     <aw-month-calendar
       (calendarDayClick)="handleCalendarDayClick($event)"
       [date]="date"
-      [calendarDayEvents]="calendarDayEvents" />
+      [calendarDayEvents]="calendarDayEvents"
+      [loading]="loading" />
   }
 </div>
