--- a/src/app/components/year-calendar/month-calendar/month-calendar.component.html
+++ b/src/app/components/year-calendar/month-calendar/month-calendar.component.html
@@ -6,30 +6,34 @@
       </div>
 
       <div class="calendar-body">
-        <ul class="calendar-weekdays">
-          @for (week of weeks; track week) {
-            <li>{{ week }}</li>
-          }
-        </ul>
+        @if (!loading) {
+          <ul class="calendar-weekdays">
+            @for (week of weeks; track week) {
+              <li>{{ week }}</li>
+            }
+          </ul>
 
-        <ul class="calendar-dates">
-          @for (calendarDay of calendarDays; track calendarDay) {
-            <li
-              (click)="handleCalendarDayClick(calendarDay)"
-              [ngClass]="{ inactive: calendarDay.inactive, active: calendarDay.isToday }">
-              <span
-                [ngClass]="{ 'not-editable': !calendarDay.canAddEvent }"
-                [ngStyle]="{ background: calendarDay.background, color: calendarDay.color }"
-                class="calendar-day">
-                @if (calendarDay.day < 10) {
-                  &nbsp;{{ calendarDay.day }}&nbsp;
-                } @else {
-                  {{ calendarDay.day }}
-                }
-              </span>
-            </li>
-          }
-        </ul>
+          <ul class="calendar-dates">
+            @for (calendarDay of calendarDays; track calendarDay) {
+              <li
+                (click)="handleCalendarDayClick(calendarDay)"
+                [ngClass]="{ inactive: calendarDay.inactive, active: calendarDay.isToday }">
+                <span
+                  [ngClass]="{ 'not-editable': !calendarDay.canAddEvent }"
+                  [ngStyle]="{ background: calendarDay.background, color: calendarDay.color }"
+                  class="calendar-day">
+                  @if (calendarDay.day < 10) {
+                    &nbsp;{{ calendarDay.day }}&nbsp;
+                  } @else {
+                    {{ calendarDay.day }}
+                  }
+                </span>
+              </li>
+            }
+          </ul>
+        } @else {
+          <aw-spinner [loading]="loading" [size]="100" />
+        }
       </div>
     </div>
   </aw-card>
