Eliminadas propiedades a CalendarDay

--- a/src/app/components/year-calendar/month-calendar/month-calendar.component.html
+++ b/src/app/components/year-calendar/month-calendar/month-calendar.component.html
@@ -19,6 +19,8 @@
                 (click)="handleCalendarDayClick(calendarDay)"
                 [ngClass]="{ inactive: calendarDay.inactive, active: calendarDay.isToday }">
                 <span
+                  awTooltip
+                  [title]="calendarDay.description ?? ''"
                   [ngClass]="{ 'not-editable': !calendarDay.canAddEvent }"
                   [ngStyle]="{ background: calendarDay.background, color: calendarDay.color }"
                   class="calendar-day">
