--- a/src/app/pages/company-holidays-manage/company-holidays-manage.component.html
+++ b/src/app/pages/company-holidays-manage/company-holidays-manage.component.html
@@ -7,8 +7,11 @@
       [loading]="loading" />
   }
 
-  <ng-template #popTemplate let-message="message"> </ng-template>
-  <button type="button" class="btn btn-primary" [popover]="popTemplate" [popoverContext]="">
+  <button triggers="mouseenter:mouseleave" type="button" class="btn btn-primary" [popover]="popTemplate">
     Open popover with custom context
   </button>
+
+  <ng-template #popTemplate let-message="message">
+    <h1>Hello qorld</h1>
+  </ng-template>
 </aw-page-base>
