--- a/src/app/pages/company-holidays-manage/company-holidays-manage.component.html
+++ b/src/app/pages/company-holidays-manage/company-holidays-manage.component.html
@@ -1,17 +1,15 @@
 <aw-page-base>
-  @if (!loading) {
-    <aw-year-calendar
-      (calendarDayClick)="handleCalendarDayClick($event)"
-      [date]="date"
-      [calendarDayEvents]="calendarDayEvents"
-      [loading]="loading" />
-  }
+  <aw-year-calendar
+    (calendarDayClick)="handleCalendarDayClick($event)"
+    [date]="date"
+    [calendarDayEvents]="calendarDayEvents"
+    [loading]="loading" />
 
-  <button triggers="mouseenter:mouseleave" type="button" class="btn btn-primary" [popover]="popTemplate">
+  <!-- <button triggers="mouseenter:mouseleave" type="button" class="btn btn-primary" [popover]="popTemplate">
     Open popover with custom context
   </button>
 
   <ng-template #popTemplate let-message="message">
     <h1>Hello qorld</h1>
-  </ng-template>
+  </ng-template> -->
 </aw-page-base>
