Implementado clandario dias festivos

--- a/src/app/components/colors/dot/dot.component.html
+++ b/src/app/components/colors/dot/dot.component.html
@@ -1,1 +1,5 @@
-<span class="circle" [ngStyle]="{ 'background-color': color }"></span>
+<span [ngClass]="{ 'rounded-pill': rounded }" [ngStyle]="{ 'background-color': color, padding: size }" class="badge">
+  <span #ref>
+    <ng-content />
+  </span>
+</span>
