--- a/src/app/pages/company-holidays-manage/company-holidays-manage.component.html
+++ b/src/app/pages/company-holidays-manage/company-holidays-manage.component.html
@@ -1,15 +1,23 @@
 <aw-page-base>
-  <aw-year-calendar
-    (calendarDayClick)="handleCalendarDayClick($event)"
-    [date]="date"
-    [calendarDayEvents]="calendarDayEvents"
-    [loading]="loading" />
+  <aw-page-header>Días festivos</aw-page-header>
 
-  <!-- <button triggers="mouseenter:mouseleave" type="button" class="btn btn-primary" [popover]="popTemplate">
-    Open popover with custom context
-  </button>
+  <aw-card>
+    <div>
+      <aw-dot [color]="calendarColors.today" [rounded]="true">1</aw-dot> Día actual
+      <aw-dot [color]="calendarColors.notWorkingDay" [rounded]="true">1</aw-dot> Día no laborable
+      <aw-dot [color]="calendarColors.holiday" [rounded]="true">1</aw-dot> Día festivo
+    </div>
+  </aw-card>
 
-  <ng-template #popTemplate let-message="message">
-    <h1>Hello qorld</h1>
-  </ng-template> -->
+  <div class="mb-2"></div>
+
+  @if (!loading) {
+    <aw-year-calendar
+      (calendarDayClick)="handleCalendarDayClick($event)"
+      [date]="date"
+      [calendarDayEvents]="calendarDayEvents"
+      [loading]="loading" />
+  } @else {
+    <aw-spinner [loading]="loading" [size]="200" />
+  }
 </aw-page-base>
