Rafactor type DateOnly

--- a/src/app/pages/company-holidays-manage/company-holidays-manage.component.html
+++ b/src/app/pages/company-holidays-manage/company-holidays-manage.component.html
@@ -3,9 +3,9 @@
 
   <aw-card>
     <div>
-      <aw-dot [color]="calendarColors.today" [rounded]="true">1</aw-dot> Día actual
-      <aw-dot [color]="calendarColors.notWorkingDay" [rounded]="true">1</aw-dot> Día no laborable
-      <aw-dot [color]="calendarColors.holiday" [rounded]="true">1</aw-dot> Día festivo
+      <aw-dot [color]="calendarColors.today">&nbsp;</aw-dot> Día actual
+      <aw-dot [color]="calendarColors.notWorkingDay">&nbsp;</aw-dot> Día no laborable
+      <aw-dot [color]="calendarColors.holiday">&nbsp;</aw-dot> Día festivo
     </div>
   </aw-card>
 
