--- a/src/app/pages/company-holidays-manage/company-holidays-manage.component.html
+++ b/src/app/pages/company-holidays-manage/company-holidays-manage.component.html
@@ -6,6 +6,7 @@
       <aw-dot [color]="calendarColors.today">&nbsp;</aw-dot> Día actual
       <aw-dot [color]="calendarColors.notWorkingDay">&nbsp;</aw-dot> Día no laborable
       <aw-dot [color]="calendarColors.holiday">&nbsp;</aw-dot> Día festivo
+      <span class="ms-3">Horas de trabajo anual: {{ workingHoursYear }}</span>
     </div>
   </aw-card>
 
