Fix timezone dias festivos

--- a/src/app/components/year-calendar/month-calendar/month-calendar.component.html
+++ b/src/app/components/year-calendar/month-calendar/month-calendar.component.html
@@ -15,13 +15,11 @@
         <ul class="calendar-dates">
           @if (!loading) {
             @for (calendarDay of calendarDays; track calendarDay) {
-              <li
-                (click)="handleCalendarDayClick(calendarDay)"
-                [ngClass]="{ inactive: calendarDay.inactive, active: calendarDay.isToday }">
+              <li (click)="handleCalendarDayClick(calendarDay)" [ngClass]="{ inactive: calendarDay.inactive }">
                 <span
                   awTooltip
                   [title]="calendarDay.description ?? ''"
-                  [ngClass]="{ 'not-editable': !calendarDay.canAddEvent }"
+                  [ngClass]="{ 'not-editable': !calendarDay.canAddEvent, today: calendarDay.isToday }"
                   [ngStyle]="{ background: calendarDay.background, color: calendarDay.color }"
                   class="calendar-day">
                   @if (calendarDay.day < 10) {
