Implementada logica al cambiar de ano

--- a/src/app/pages/company-holidays-manage/company-holidays-manage.component.html
+++ b/src/app/pages/company-holidays-manage/company-holidays-manage.component.html
@@ -14,7 +14,8 @@
           Horas de trabajo: <span class="text-success">{{ workingHoursYear }}</span>
         </span>
       </div>
-      <aw-year-selector />
+
+      <aw-year-selector (changeYearSelected)="handleChangeYearSelected($event)" />
     </div>
   </aw-card>
 
