--- a/src/app/components/selectors/month-selector/month-selector.component.html
+++ b/src/app/components/selectors/month-selector/month-selector.component.html
@@ -3,6 +3,7 @@
   (onShown)="handleOpenCalendar($event)"
   [(ngModel)]="dateSelected"
   [bsConfig]="bsConfig"
+  [readOnly]="readOnly"
   autocomplete="off"
   bsDatepicker
   class="form-control"
