--- a/src/app/pages/company-holidays-manage/company-holidays-manage.component.html
+++ b/src/app/pages/company-holidays-manage/company-holidays-manage.component.html
@@ -15,7 +15,7 @@
         </span>
       </div>
 
-      <aw-year-selector (changeYearSelected)="handleChangeYearSelected($event)" />
+      <aw-year-selector (changeYearSelected)="handleChangeYearSelected($event)" [readOnly]="true" />
     </div>
   </aw-card>
 
