--- a/src/app/components/selectors/year-selector/year-selector.component.html
+++ b/src/app/components/selectors/year-selector/year-selector.component.html
@@ -3,6 +3,7 @@
   (onShown)="handleOpenCalendar($event)"
   [(ngModel)]="dateSelected"
   [bsConfig]="bsConfig"
+  [readOnly]="readOnly"
   autocomplete="off"
   bsDatepicker
   class="form-control"
